# inochi2d

./: .gitignore  CMakeLists.txt  build.py  build.sh  dub.sdl  main.cpp
source/inochi2d/wrapper/: package.d
